--- a/Четвёртое занятие.md
+++ b/Четвёртое занятие.md
@@ -15,7 +15,7 @@
 Элементы: | 5 | 7 | 9 | ... | a | ... |  b  |   c   |\
 <br/>
 Заметим, что i-ый элемент массива равен a, предпоследний под индексом N-2 является равен b, а последний элемент массива (под индексом N-1) равен c, следовательно для нас справедливо следующее утверждение, если N - количество элементов массива:<br/>
-\$0 \leq i \leq N-1$
+$$ \$0 \leq i \leq N-1$ $$
 ## Виды массивов по виду выделения памяти: ##
 1. Статические (инициализируется как {тип данных} {название переменной}[количество элементов], например: int array[10]. В квадратных скобках может также содержаться какая-то переменная **при условии**, что она является неизменяемой (const).
 2. Динамические - можно выделить два основных типа динамических массивов, которые мы рассмотрим в рамках курса:
