--- a/Четвёртое занятие.md
+++ b/Четвёртое занятие.md
@@ -1,7 +1,7 @@
 # Четвёртое занятие (28/10/2024)
 **Тема занятия:** Массивы (=векторы), небольшая подводка к указателям
 ## Массивы ##
-**Что такое массив?**\
+**Что такое массив?**
 Массив — это структура данных, которая представляет собой упорядоченный набор элементов одного типа. Каждый элемент массива имеет свой индекс, который используется для доступа к нему.
 \
 ## Индексация массивов ##
