--- a/Четвёртое занятие.md
+++ b/Четвёртое занятие.md
@@ -92,9 +92,10 @@ vector<int> v7 = {1, 2, 3, 5}; // вектор v7 состоит из чисел
 4. $O(N^2)$ - квадратичная сложность.
 Это самые базовые случаи, которые мы используем для начала.
 ![](https://habrastorage.org/getpro/habr/upload_files/973/455/cf3/973455cf3bb354f49113562838372900.jpg)
+
 ## Решето Эратосфена ##
 Решето Эратосфена — это древний алгоритм для нахождения всех простых чисел до заданного предела. Он был разработан греческим математиком Эратосфеном в III веке до нашей эры. Этот метод эффективен и прост в реализации, что делает его популярным для работы с простыми числами. 
-Когда мы решали задачу о поиске простых чисел, которые меньше вводимого числа, мы писали простейший перебор с помощью цикла всех чисел, а после проверяли - простое ли каждое из них. В данном случае асимптотика была равна $O(Nsqrt(N))$, в случае же с алгоритмом Решета Эратосфена - асимптотика многократно улучшается и становится равна $O(Nlog(N))$.
+Когда мы решали задачу о поиске простых чисел, которые меньше вводимого числа, мы писали простейший перебор с помощью цикла всех чисел, а после проверяли - простое ли каждое из них. В данном случае асимптотика была равна $$ O(Nsqrt(N)) $$, в случае же с алгоритмом Решета Эратосфена - асимптотика многократно улучшается и становится равна $$ O(Nlog(N)) $$.
 
 В чём заключается суть Решета Эратосфена? 
 Давайте выпишем все числа из нужного нам диапазона, допустим это будут числа от 0 до 19: 
