--- a/Четвёртое занятие.md
+++ b/Четвёртое занятие.md
@@ -86,16 +86,17 @@ vector<int> v7 = {1, 2, 3, 5}; // вектор v7 состоит из чисел
 Алгоритмы используются для оптимизации поставленных задач, следовательно мы должны уметь оценивать их работы. Для оценки временной сложности и оценки по памяти, принято использовать нотацию О-большое.
 Что это означает? Что количество производимых операций кодом - например, итераций, или же количество выделяемой памяти, при чём эти параметры обязательно должны зависеть от какой-нибудь величины (например, вводят число N и мы должны вывести все числа от 1 до N - сложность программы здесь зависит от вводимого параметра N).
 Таким образом введём следующие сложности, с которыми мы будем работать в большинстве случаев:
-1. $O(1)$ - наилучший случай, отсутствует какая-либо зависимость, то есть всё выполняется мгновенно. Это та асимптотика, к которой мы стремимся.
-2. $O(N)$ - линейная сложность (аналогично линейной функции).
-3. $O(sqrt{N})$ - коренная сложность.
-4. $O(N^2)$ - квадратичная сложность.
+1. $$O(1)$$ - наилучший случай, отсутствует какая-либо зависимость, то есть всё выполняется мгновенно. Это та асимптотика, к которой мы стремимся.
+2. $$O(N)$$ - линейная сложность (аналогично линейной функции).
+3. $$O(\sqrt N)$$ - коренная сложность.
+4. $$O(N^2)$$ - квадратичная сложность.
 Это самые базовые случаи, которые мы используем для начала.
 ![](https://habrastorage.org/getpro/habr/upload_files/973/455/cf3/973455cf3bb354f49113562838372900.jpg)
 
 ## Решето Эратосфена ##
 Решето Эратосфена — это древний алгоритм для нахождения всех простых чисел до заданного предела. Он был разработан греческим математиком Эратосфеном в III веке до нашей эры. Этот метод эффективен и прост в реализации, что делает его популярным для работы с простыми числами. 
-Когда мы решали задачу о поиске простых чисел, которые меньше вводимого числа, мы писали простейший перебор с помощью цикла всех чисел, а после проверяли - простое ли каждое из них. В данном случае асимптотика была равна $$ O(N \sqrt(N)) $$, в случае же с алгоритмом Решета Эратосфена - асимптотика многократно улучшается и становится равна $$ O(N \log(N)) $$.
+Когда мы решали задачу о поиске простых чисел, которые меньше вводимого числа, мы писали простейший перебор с помощью цикла всех чисел, а после проверяли - простое ли каждое из них. В данном случае асимптотика была равна $$O(N\sqrt N)$$, в случае же с алгоритмом Решета Эратосфена - асимптотика многократно улучшается и становится равна
+$$O(N\log N)$$.
 
 В чём заключается суть Решета Эратосфена? 
 Давайте выпишем все числа из нужного нам диапазона, допустим это будут числа от 0 до 19: 
