--- a/Четвёртое занятие.md
+++ b/Четвёртое занятие.md
@@ -1,3 +1,8 @@
+<head>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+</head>
+
+
 # Четвёртое занятие (28/10/2024)
 **Тема занятия:** Массивы (=векторы), небольшая подводка к указателям
 ## Массивы ##
